# remote-claws

./: .gitignore  CLAUDE.md  LICENSE  README.md  SKILLS.md  TOOLS.md  permissions.json  pyproject.toml  remote-claws-openclaw-setup-guide.md  remote-claws.example.json  start.ps1  start.sh
.github/workflows/: ci.yml
openclaw/: SKILL.md
scripts/: smoke_browser.py
src/pywinmcp/: config.py  permissions.py  server.py
src/pywinmcp/browser/: manager.py  tools.py
src/pywinmcp/desktop/: tools.py
src/pywinmcp/exec/: tools.py
src/remote_claws/: auth.py  config.py  permissions.py  screenshot.py  server.py  setup_auth.py
src/remote_claws/browser/: manager.py  profile.py  setup.py  tools.py
src/remote_claws/desktop/: tools.py
src/remote_claws/exec/: tools.py
src/remote_claws/files/: tools.py
tests/: conftest.py  test_auth.py  test_config.py  test_permissions.py  test_server.py
