[project]
name = "remote-claws"
version = "0.1.0"
description = "MCP server for remote machine control — browser, desktop, exec, and file transfer"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.20",
    "playwright>=1.40",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.8",
    "Pillow>=10.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
remote-claws = "remote_claws.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
