[project]
name = "remote-claws"
version = "0.1.0"
description = "MCP server for remote machine control — browser, desktop, exec, and file transfer"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.20",
    "playwright>=1.40",
    "tf-playwright-stealth>=1.1",  # detection-evasion patches applied per-page
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.8",
    "Pillow>=10.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[project.scripts]
remote-claws = "remote_claws.server:main"
remote-claws-setup = "remote_claws.setup_auth:main"
remote-claws-browser-setup = "remote_claws.browser.setup:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "UP",      # pyupgrade
    "SIM",     # simplify
    "RUF",     # ruff-specific
]
ignore = [
    "E501",    # line too long (we use 120)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
